force-app/main/default/objects/ExecutionLog__c/ExecutionLog__c.object-meta.xml
<CustomObject>
    <label>Execution Log</label>
    <pluralLabel>Execution Logs</pluralLabel>
    <nameField>
        <label>Execution Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>LOG-{0000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>