force-app/main/default/objects/ExecutionLog__c/fields/ExecutedAt__c.field-meta.xml
<CustomField>
    <fullName>ExecutedAt__c</fullName>
    <label>Executed At</label>
    <type>DateTime</type>
</CustomField>