force-app/main/default/objects/ExecutionLog__c/fields/Execution__c.field-meta.xml
<CustomField>
    <fullName>Execution__c</fullName>
    <label>Execution</label>
    <type>Lookup</type>
    <referenceTo>Execution__c</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>ExecutionLogs</relationshipName>
</CustomField>