force-app/main/default/objects/ExecutionLog__c/fields/InputData__c.field-meta.xml
<CustomField>
    <fullName>InputData__c</fullName>
    <label>Input Data</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>