force-app/main/default/objects/ExecutionLog__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <type>Lookup</type>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Execution Logs</relationshipLabel>
    <relationshipName>StepExecutionLogs</relationshipName>
</CustomField>