force-app/main/default/objects/ExecutionLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Execution Logs</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Execution__c</columns>
    <columns>Step__c</columns>
    <columns>Status__c</columns>
    <columns>ExecutedAt__c</columns>
    <columns>ErrorMessage__c</columns>
</ListView>